Closed Bug 357568 Opened 19 years ago Closed 19 years ago

The composition/preedit string of IM is not committed by mouse click if the editor is content of the web pages

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file, 1 obsolete file)

The composition string of IM is not committed by mouse click event if the editor is a content of the web pages. If the editor is a content of toolbar(e.g., search bar and location bar), it is committed by mouse click event. This is a bug of the patch for bug 321468.
Status: NEW → ASSIGNED
Attached patch Patch rv1.0 (obsolete) — Splinter Review
Now, the timing of the initializing the IME data is only occurred on the widget getting the focus at first time. But the methods of nsIKBStateControl are called at non-related to the timing. Therefore, we should initialize at the methods called if the initializing has not done.
Attachment #243088 - Flags: review?(masaki.katakai)
Comment on attachment 243088 [details] [diff] [review] Patch rv1.0 Looks OK for me.
Attachment #243088 - Flags: review?(masaki.katakai) → review+
Comment on attachment 243088 [details] [diff] [review] Patch rv1.0 Thank you, Katakai-san for your review.
Attachment #243088 - Flags: superreview?(roc)
How about adding "if (mIMEData) return;" to nsWindow::IMEInitData, so we don't have to add that check everywhere?
Attached patch Patch rv1.1Splinter Review
Attachment #243088 - Attachment is obsolete: true
Attachment #243738 - Flags: superreview?(roc)
Attachment #243738 - Flags: review+
Attachment #243088 - Flags: superreview?(roc)
Comment on attachment 243738 [details] [diff] [review] Patch rv1.1 thank you Nakano-san!
Attachment #243738 - Flags: superreview?(roc) → superreview+
Sorry, for the delay, because I was in IP unreachable, sorry. Thank you, Roc. I checked-in the patch. -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: