Bug 357568 The composition/preedit string of IM is not committed by mouse click if the editor is content of the web pages